tests/fixtures/invalid/ord_none.py
# Cannot call ord() with None
x = ord(None)
